--- a/fest_portal_locked_site.html
+++ b/fest_portal_locked_site.html
@@ -35,7 +35,7 @@
     </section>
 
     <script>
-        const MIN_FEST_BALANCE = 10;
+        const MIN_FEST_BALANCE = 1000000;
         const FEST_MINT = 'HgeiiagUMPDzB4Cuks9GP3EzBA1EZXivQyMXra5JLjmD';
 
         async function connectWallet() {
